--- a/sml165_final/sml165final_notebook.ipynb
+++ b/sml165_final/sml165final_notebook.ipynb
@@ -22,7 +22,7 @@
     "## *-*Round 1*-*\n",
     "\n",
     "DataSET1 retrieved from: https://data.wprdc.org/dataset/pittsburgh-american-community-survey-2015-miscellaneous-data/resource/82f29015-6905-4b1c-8300-afe9bb2231b3\n",
-    "DataSET2 retrieved from: https://data.wprdc.org/dataset/1984-community-profiles-a-descriptive-picture-of-communities-in-allegheny-county/resource/8e2b239e-4a46-49f9-bd13-2566f3c64d28\n",
+    "\nDataSET2 retrieved from: https://data.wprdc.org/dataset/1984-community-profiles-a-descriptive-picture-of-communities-in-allegheny-county/resource/8e2b239e-4a46-49f9-bd13-2566f3c64d28\n",
     "\n",
     "### Pittsburgh American Community Survey 2015 - miscellaneous-data -\n",
     "*Organization: Census Bureau's Population Estimates Program*\n",
