--- a/PresentationFinal.ipynb
+++ b/PresentationFinal.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final Project OWO (Samantha, Emily, Steven)"
+    "## Final Project OWO (Samantha, Emily, & Steven)"
    ]
   },
   {
