--- a/PresentationFinal.ipynb
+++ b/PresentationFinal.ipynb
@@ -196,7 +196,7 @@
    "source": [
     "![alt text](https://media.giphy.com/media/UTj6uNKzYFmJGbKdgH/giphy.gif)\n",
     "\n",
-    "The second set of data is from a wider range of neighborhoods and includes where people moved from as they decided to move away from the city.\n",
+    "The second set of data is from a wider range of neighborhoods and includes where people moved to as they decided to move away from the city.\n",
     "\n",
     "The resulting neighborhoods had the greatest increase in population across all of Allegheny County:\n",
     "\n",
