--- a/PresentationFinal.ipynb
+++ b/PresentationFinal.ipynb
@@ -194,6 +194,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](contenderListout.png)",
+    "\n",
     "![alt text](https://media.giphy.com/media/UTj6uNKzYFmJGbKdgH/giphy.gif)\n",
     "\n",
     "The second set of data is from a wider range of neighborhoods and includes where people moved to as they decided to move away from the city.\n",
