--- a/PresentationFinal.ipynb
+++ b/PresentationFinal.ipynb
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![]popincrease.png)",
+    "![](popincrease.png)",
     "\n",
     "## Covid-19 Pandemic UwU (Emily)"
    ]
