--- a/PresentationFinal.ipynb
+++ b/PresentationFinal.ipynb
@@ -495,6 +495,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](popincrease.png)",
+    "\n",
     "## Covid-19 Pandemic UwU (Emily)"
    ]
   },
